--- a/.ipynb
+++ b/.ipynb
@@ -6,7 +6,8 @@
       "name": "ГумадаЯрослав.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOCmlDSkAjenRIEuoj8xmS4"
+      "authorship_tag": "ABX9TyOCmlDSkAjenRIEuoj8xmS4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/gist/GumadaYaroslav/f59d8c1ea6bcc8d9a76ce283fae850a0/.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
